--- a/Dokumentation.tex
+++ b/Dokumentation.tex
@@ -6,27 +6,348 @@ Interne Kommunikation des Gerichts, auch wertende Notizen einzelner Mitglieder d
 Werden während Verfahren Tonaufzeichnungen angefertigt, sind diese zu löschen, sobald die Parteien das daraus angefertigte Protokoll erhalten und einen Monat keinen Widerspruch erhoben haben, \S~14 Abs.~3~SGO\index[paridx]{SGO!14@\S~14!3@Abs.~3}.
 Die Verfahrensakte ist fünf Jahre nach Abschluss des Verfahrens aufzubewahren, Urteile unbefristet, \S~14~Abs.~5~SGO\index[paridx]{SGO!14@\S~14!5@Abs.~5}.}
 
-\chapter{Dokumentation und Rechenschaftsbericht}
+\chapter{Dokumentation und Rechenschaftslegung}
+\label{Dokumentation}
+Die Dokumentationspflichten der Schiedsgerichte sind in \S~14~SGO\index[paridx]{SGO!14@\S~14} geregelt.
+Diese Dokumentation ist für den Gebrauch im Verfahren bestimmt; bezieht sich also auf die Verfahrensakte.
+Dies dient einerseits dazu, das Verfahren zu erleichtern (vgl.\nomenclature{vgl.}{vergleiche} auch \S~10 Abs.~1 S.~3~SGO),\index[paridx]{SGO!10@\S~10!1@Abs.~1} andererseits auch zur Verwendung durch eine Rechtsmittelinstanz.
+Darüber hinaus dient die Dokumentation auch dem längerfristigen Nachweis, \S~14 Abs.~5~SGO\index[paridx]{SGO!14@\S~14!5@Abs.~5}.
 
-%\section{Protokolle}
-%Sitzungsprotokolle? Verhandlungsprotokolle?
+In \S~15~SGO\index[paridx]{SGO!15@\S~15} schließlich ist die Rechenschaftslegung nach außen geregelt.
+Die Veröffentlichungsrechte und -pflichten sind die Begrenzung der ansonsten für die Mitglieder von Schiedsgerichten geltenden Verschwiegenheitspflicht (\S~2 Abs.~4~SGO).\index[paridx]{SGO!2@\S~2!4@Abs.~4}\index[idx]{Verschwiegenheitspflicht}
+Da Dokumentation für den internen Gebrauch und die Rechenschaftslegung zur Veröffentlichung eng miteinander verflochten sind, werden sie hier gemeinsam behandelt.
 
-%section{Beschlüsse} % ???
-%Beschlüsse zu Befangenheit und so ein Krams.
+\section{Verfahrensakte}
+\label{Dokumentation:Akte}
+\index[idx]{Akte!Inhalt}
+\index[idx]{Verfahrensakte|see{Akte}}
+Der Umfang der Verfahrensakte wird von \S~14 Abs.~2~SGO\index[paridx]{SGO!14@\S~14!2@Abs.~2} definiert.
+Da es sich hierbei ausschließlich um Texte handelt -- von Tonaufzeichnungen sind Protokolle anzufertigen, \S~14 Abs.~3 S.~2~SGO\index[paridx]{SGO!14@\S~14!3@Abs.~3} -- empfiehlt es sich, die verschiedenen Quellen in einer Datei (bspw.\nomenclature{bspw.}{beispielsweise} im PDF\nomenclature{PDF}{Portable Document Format}) zusammenzufassen.
+Soweit die Akte aus einzelnen Dateien besteht, empfiehlt sich der Übersicht halber die Benennung nach eindeutigen Zeitstempeln\footnote{Bspw. im Format \emph{JJMMDD}.} als Präfix.
 
-%\section{Urteile}
-%\subsection{Anonymisierung und Pseudonymisierung}
+Als \enquote{Schriftstücke} i.S.d.\nomenclature{i.S.d.}{im Sinne des} \S~14 Abs.~2~SGO sind auch sämtliche Aktennotizen (z.B.\nomenclature{z.B.}{zum Beispiel} zu (fern-) mündlich gestellten Anträgen etc.\nomenclature{etc.}{et cetera} zu verstehen.
+Nicht zur Akte gehören hingegen die Beratungen der Richter:
+Da das Abstimmverhalten nicht mitzuteilen ist, \S~12 Abs.~3 S.~4~SGO\index[paridx]{SGO!12@\S~12!3@Abs.~3} und die Richter allgemein Verschwiegenheit zu wahren haben, \S~2 Abs.~4~SGO,\index[paridx]{SGO!2@\S~2!4@Abs.~4} sind auch Beratungen der Richter untereinander nicht Teil der Akte.
+Stattdessen umfasst der Begriff der \enquote{relevanten Schriftstücke} (u.a.)\nomenclature{u.a.}{unter anderem} jedweden (Schrift-) Verkehr zwischen Gericht und den Parteien, sowie verfahrensleitende Beschlüsse, dienstliche Stellungnahmen der Richter (bspw. zur Besorgnis der Befangenheit) und die Notizen über Spruchkörperveränderungen.
 
-%\section{Öffentliche Mitteilungen}
-%\subsection{Bekanntmachung von Beeinflussungsversuchen}
-%\subsection{Stellungnahmen zu laufenden Verfahren}
+Die Verfahrensakte ist nach Abschluss des Verfahrens 5~Jahre aufzubewahren, \S~14 Abs.~5 S.~1~SGO.\index[paridx]{SGO!14@\S~14!5@Abs.~5}
+Das ist auch elektronisch möglich, bspw. im ohnehin verwendeten Ticket-System oder als konsolidiertes PDF.
+Die Akte ist gegen unbefugten Zugriff zu sichern; neben dem jeweils amtierenden Gericht haben nur die jeweiligen Verfahrensparteien das Recht auf Akteneinsicht, \S~14 Abs.~4~SGO.\index[paridx]{SGO!14@\S~14!4@Abs.~4}
+Nach Ablauf der Aufbewahrungsfrist ist die Akte (mit Ausnahme des Urteils, \S~14 Abs.~5 S.~2~SGO),\index[paridx]{SGO!14@\S~14!5@Abs.~5} zu vernichten bzw. zu löschen.
 
-%\section{Aufbewahrung der Akten}
-%elektronisch
-%Insbesondere die Veröffentlichung als Hypertext, z.B. innerhalb eines Wikis oder auf einem Blog, scheidet aus. (Vorteil von Stand-Alone-Dateien: kann man mittels PGP signieren)
-%papier (vgl. § 12 Abs. 7 SGO)
+\section{Protokolle}
+\label{Dokumentation:Protokolle}
+In Bezug auf Protokolle fallen die Dokumentations- und Berichtspflichten der Schiedsgerichte unterschiedlich aus:
+Es kommt darauf an, ob es sich um Protokolle von (fern-) mündlichen Verhandlungen handelt (Verhandlungsprotokolle), oder um solche von den übrigen Sitzungen des Gerichts (Sitzungsprotokolle).
 
-%\section{Arbeitsbericht}
+\subsection{Verhandlungsprotokolle}
+\label{Dokumentation:Protokolle:Verhandlungsprotokolle}
+Die Protokolle von Verhandlungen sind Teil der Verfahrensakte, \S~14 Abs.~2~SGO.\index[paridx]{SGO!14@\S~14!2@Abs.~2}
+Die SGO sieht dabei explizit \emph{Verlaufsprotokolle} vor:
+Solche sind umfangreicher als bloße \emph{Ergebnisprotokolle}, da sie auch den Inhalt des jeweiligen Vorbringens, d.h. ggf.\nomenclature{ggf.}{gegebenenfalls} auch der rechtlichen Diskussion widergeben.
+Sie sind allerdings weniger umfangreich als \emph{Wortprotokolle} und geben im Gegensatz zu diesen das Vorbringen der Beteiligten nur zusammenfassend und in indirekter Rede wider, anstatt den genauen Wortlaut aufzuführen.
 
-%\chapterbib
+Auch die Verschriftlichung von Tonaufzeichnungen muss nur als Verlaufsprotokoll erfolgen.
+Soweit das Gericht wörtliche Widergabe der Aufzeichnung im Protokoll wünscht, ist es zulässig, eine solche anzufertigen und damit über die Anforderungen der Satzung hinauszugehen.
+Ein Anspruch der Parteien darauf besteht indes nicht.
+
+\subsection{Sitzungsprotokolle}
+\label{Dokumentation:Protokolle:Sitzungsprotokolle}
+Die Protokollierung von Sitzungen des Schiedsgerichts, in denen nicht mit den Beteiligten verhandelt, sondern lediglich das Verfahren -- oder Administratives -- beraten wird, ist in der SGO ungeregelt.
+Da keine Pflicht besteht, kann eine Protokollierung nicht verbindlich verlangt werden.
+Es besteht allerdings auch kein Verbot.
+Genauer:
+Die Verschwiegenheitspflicht verbietet eine Protokollierung nicht:
+Es steht dem Gericht im Rahmen seiner inneren Organisationsfreiheit frei, diese Sitzungen nach eigenem Ermessen zu protokollieren.
+Lediglich die Veröffentlichung ist reglementiert.
+
+Hier bietet sich eine Veröffentlichung im Rahmen der regelmäßigen Berichtspflicht des Schiedsgerichts nach \S~15 Abs.~1~SGO\index[paridx]{SGO!15@\S~15!1@Abs.~1} und bzw.\nomenclature{bzw.}{beziehungsweise} oder im Arbeitsbericht an.
+In beiden Fällen sieht die SGO jeweils nur Mindestanforderungen für die Veröffentlichung vor, über die die Schiedsgerichte in gewissem Umfang hinausgehen dürfen.
+
+\section{Beschlüsse}
+\label{Dokumentation:Beschlüsse}
+Im Gegensatz zum \emph{Urteil} ist der Beschluss in der SGO nicht eigens geregelt.
+Dabei ist bereits der Begriff selbst nicht eindeutig belegt:
+Einerseits ist ein Beschluss die formelle Entschließung eines Organs durch seine Mitglieder; im Rahmen der (staatlichen) Gerichtsbarkeit werden als \emph{Beschluss} auch Entscheidungen bezeichnet, die -- im Gegensatz zu \emph{Urteilen} -- nicht nach mündlicher Verhandlung ergehen.
+Dieser Nomenklatur folgend wäre die Mehrzahl der \enquote{Urteile} im Rahmen der Schiedsgerichtsbarkeit der Piratenpartei wohl als \enquote{Beschluss} zu bezeichnen.%Verweis auf Urteilskapitel; dort noch nachbessern!
+
+Tatsächlich kennt auch die SGO Beschlüsse, die ein Verfahren abschließen, ebenso allerdings auch Beschlüsse, die das Verfahren lediglich vorantreiben und ggf. in eine bestimmte Richtung lenken (sog. \emph{verfahrensleitende} Beschlüsse).
+Alle Beschlüsse müssen jedenfalls als Teil der jeweiligen Verfahrensakte dokumentiert werden.
+Unterschiedlich ausfallen muss jedoch die Bewertung bezüglich der Veröffentlichung (und damit auch Aufbewahrung) je nach Kategorie, der der Beschluss angehört.
+
+\subsection{Verfahrensleitende Beschlüsse}
+\label{Dokumentation:Beschlüsse:Verfahrensleitend}
+Verfahrensleitende Beschlüsse sind Entscheidungen des Gerichts, die sich auf den Verfahrensfortgang beziehen, ohne das Verfahren zu beenden.
+Diese lassen sich wiederum untergliedern in rechtsmittelfähige und unanfechtbare Beschlüsse.
+
+\subsubsection{Rechtsmittelfähige Beschlüsse}
+\label{Dokumentation:Beschlüsse:Verfahrensleitend:Rechtsmittelfähig}
+Gegen einen rechtsmittelfähigen Beschluss können die Beteiligten auch aus dem Verfahren heraus ein Rechtsmittel zur nächsten Instanz erheben (vgl. auch \S~13 Abs.~6~SGO).\index[paridx]{SGO!13@\S~13!6@Abs.~6}
+Der einzige rechtsmittelfähige, aber gleichzeitig nicht auch das Verfahren (zmd. am jeweiligen  Gericht) beendende Beschluss ist der Beschluss, der die Ablehnung eines Richters durch eine Streitpartei für unbegründet erklärt, \S~5 Abs.~6 S.~2, 3~SGO.\index[paridx]{SGO!5@\S~5!6@Abs.~6}
+Da das Verfahren am ursprünglichen Gericht weiterläuft und die Entscheidung im Urteil ohnehin im Rahmen der Prozessgeschichte zumindest zu erwähnen ist, kann eine Veröffentlichung hier unterbleiben.
+Zudem besteht für die Beteiligten die Möglichkeit des Rechtsmittelgebrauchs, die ihrerseits eine zu veröffentlichende Entscheidung (dann des Obergerichts) nach sich zöge. 
+
+\subsubsection{Unanfechtbare Beschlüsse}
+\label{Dokumentation:Beschlüsse:Verfahrensleitend:Unanfechtbar}
+\index[idx]{Beschluss!Unanfechtbarkeit}
+Nicht anfechtbar sind bspw. die Eröffnung eines Verfahrens gemäß \SSS~8 Abs.~6 S.~1, 9 Abs.~1 S.~1~SGO,\index[paridx]{SGO!8@\S~8!6@Abs.~6}\index[paridx]{SGO!9@\S~9!1@Abs.~1} der Ausschluss eines Mitglieds des Spruchkörpers wegen der Besorgnis der Befangenheit (\S~5 Abs.~6 S.~1~SGO\index[paridx]{SGO!5@\S~5!6@Abs.~6}), sowie die Anordnungen der Schiedsgerichte zu Fristen, über Beweisanträge (vgl. \S~10 Abs.~1 S.~2~SGO)\index[paridx]{SGO!10@\S~10!2@Abs.~2} und alle sonstigen Beschlüsse, gegen die nicht explizit ein Rechtsmittel vorgesehen ist.\footnote{Vgl. \S~13 Abs.~6~SGO\index[paridx]{SGO!13@\S~13!6@Abs.~6}, MISSING BSG zu RECHTSMITTELN/RECHTSMITTELKLARHEIT!.}
+
+Unanfechtbare Beschlüsse dürften in der Regel eindeutig der Verfahrensakte zuzuordnen sein.
+Eine Veröffentlichung muss daher nicht erfolgen.
+Soweit eine Veröffentlichung nicht erfolgt, gilt aber auch die fünfjährige Aufbewahrungsfrist für Akten, anstatt der unbegrenzten Aufbewahrungspflicht für Urteile.
+
+% Sonderfall Verweisung an den Senat des BSG → oder ist das verfahrensbeendend? Mal BSG-Praxis angucken!
+
+\subsection{Verfahrensabschließende Beschlüsse}
+\label{Dokumentation:Beschlüsse:Verfahrensabschließend}
+Aus der SGO ergeben sich allerdings eine erhebliche Anzahl an Beschlüssen, die ein Verfahren beenden (können).
+Dies sind:
+\begin{enumerate}
+\item Die Übertragung eines Verfahrens an den Senat des Bundesschiedsgerichts, \S~3 Abs.~11 S.~7~SGO,\index[paridx]{SGO!3@\S~3!11@Abs.~11}
+\item die Verweisung eines Verfahrens wegen Handlungsunfähigkeit des Gerichts, \S~6 Abs.~5~SGO,\index[paridx]{SGO!6@\S~6!5@Abs.~5}
+\item die Übernahme eines Verfahrens durch das Obergericht wegen Verfahrensverzögerung, \S~10 Abs.~9 S.~5~SGO,\index[paridx]{SGO!10@\S~10!9@Abs.~9}
+\item die Ablehnung der Verfahrenseröffnung (Nichteröffnung),\index[idx]{Nichteröffnung} \S~8 Abs.~6~SGO,\index[paridx]{SGO!8@\S~8!6@Abs.~6}
+\item Erlass oder Ablehnung einer einstweiligen Anordnung (da hiermit das Verfahren im einstweiligen Rechtsschutz zunächst beendet wird), \S~11 Abs.~1, 7~SGO.\index[paridx]{SGO!11@\S~11!1@Abs.~1}\index[paridx]{SGO!11@\S~11!7@Abs.~7}
+\end{enumerate}
+
+Es ist naheliegend, diese Beschlüsse aufgrund ihrer verfahrensbeendenden Wirkung wie Urteile zu behandeln und die auf Urteile anzuwendenden Vorschriften ebenfalls (ggf. analog) anzuwenden.\footnote{In Bezug auf einstweilige Anordnungen ist dies bereits durch die SGO vorgeschrieben, \S~11 Abs.~7~SGO.\index[paridx]{SGO!11@\S~11!7@Abs.~7}}
+
+\section{Urteile}
+\label{Dokumentation:Urteile}
+Der Aufbau der Urteile ist bereits ausführlich behandelt worden (vgl. Kapitel~\ref{Urteilsaufbau} ab S.~\pageref{Urteilsaufbau}).
+Diese Originalfassung muss in Papierform vorliegen (\Zitat{schriftlich}, \Zitat{von allen Richtern unterschrieben}, \S~12 Abs.~7~SGO\index[paridx]{SGO!12@\S~12!7@Abs.~7}) und darf keine Schwärzungen enthalten.
+Für sie gelten daher besondere Aufbewahrungsbestimmungen (vgl.~\ref{Dokumentation:Aufbewahrung}).
+
+Anders verhält es sich mit der für die Veröffentlichung bestimmte (\S~12 Abs.~8~SGO)\index[paridx]{SGO!12@\S~12!8@Abs.~8} Fassung.
+Diese Fassung ist einerseits vom Schiedsgericht selbst zu veröffentlichen, andererseits ist eine Kopie dem Bundesschiedsgericht zuzuleiten, \S~12 Abs.~9 S.~1~SGO.
+Die zur Veröffentlichung bzw. zur Weiterleitung an das Bundesschiedsgericht bestimmte Fassung muss in unterschiedlichem Umfang geschwärzt werden.
+
+\subsection{Pseudonymisierung}
+\label{Dokumentation:Urteile:Pseudonymisierung}
+\index[idx]{Pseudonymisierung}
+Ist das Verfahren öffentlich, so wird das Urteil insgesamt veröffentlicht, \S~12 Abs.~8 S.~1~SGO.\index[paridx]{SGO!12@\S~12!8@Abs.~8}
+Zum Schutz der Persönlichkeitsrechte aller Beteiligten soll allerdings der Rückschluss auf ihre Identität erschwert werden.
+Daher sind ihre Namen zu pseudonymisieren.
+
+Pseudonymisieren ist das Ersetzen des Namens und anderer Identifikationsmerkmale durch ein Kennzeichen zu dem Zweck, die Bestimmung des Betroffenen auszuschließen oder wesentlich zu erschweren (\S~3 Abs.~6a~BDSG).\index[paridx]{BDSG!3@\S~3!6a@Abs.~6a}\nomenclature{BDSG}{Bundesdatenschutzgesetz}
+Zu beachten ist, dass laut Satzung eine Pflicht zur Pseudonymisierung lediglich für die Namen besteht.
+Davon sind zwar auch sämtliche Arten Nicknames umfasst, aber eben -- im Gegensatz zur Definition aus dem BDSG -- keine sonstigen Merkmale der Person.
+Die Bestimmung der Identität der Beteiligten soll also erschwert werden; verpflichtet, sie tatsächlich unmöglich zu machen, ist das Schiedsgericht nicht.
+Im Interesse der Beteiligten können aber auch andere Merkmale, die zur einfachen Identifizierung einer Person dienen können, pseudonymisiert werden.
+Insbesondere gilt dies für Anschrift und Kontaktdaten von Individuen, die zwar nicht von Satzung wegen, aber aus Gründen des Datenschutzes zu schwärzen sind.
+Aus der Praxis der Schiedsgerichte hat sich ergeben, dass sie gleich dem Namen zu behandeln sind. 
+
+Ausdrücklich ausgenommen von der Pseudonymisierungspflicht sind gemäß \S~12 Abs.~8 S.~2~SGO\index[paridx]{SGO!12@\S~12!8Abs.~8} lediglich die Namen von Gliederungen und die Namen der Richter in ihrer Funktion.
+Es soll also aus den Urteilen auch für die Öffentlichkeit stets hervorgehen, welche Gliederung in welcher Weise beteiligt war.
+Auch die Bezeichnung von Organen (z.B. Vorstand, Kreisparteitag, etc.) darf nicht geschwärzt werden, da es sich hierbei nicht um Personen, sondern eben um Organe handelt.
+Soweit aber Personen für die Gliederungen (oder deren Organe) handeln, sind diese wiederum zu pseudonymisieren -- selbst wenn sie in Funktion (bspw. als Vorstand oder als Prozessvertretung) handeln.
+Kein Recht auf Pseudonymisierung in einem Urteil haben lediglich Richter, soweit sie als Richter auftreten und handeln.
+Sobald ein Richter lediglich als Mitglied der Partei oder sonst außerhalb seiner Funktion als Richter im Urteil benannt wird, wäre sein Name ebenfalls zu pseudonymisieren.
+
+Die Vorschrift wurde in der Vergangenheit von den Schiedsgerichten sehr eng ausgelegt bzw. fast lax gehandhabt:
+So wurden bspw. Anwälte, die als Prozessvertreter auftreten, namentlich und mit Kanzleianschrift benannt oder vom streitgegenständlichen Geschehen betroffene Bundesvorstandsmitglieder namentlich im Sachverhalt aufgeführt.\footnote{Die Urteile liegen den Verfassern vor; auf einen Nachweis wurde aus offensichtlichen Gründen bewusst verzichtet.}
+
+Da die Personennamen nicht anonymisiert, sondern lediglich pseudonymisiert werden müssen, ist die Verwendung von personenbezogenen Schlüsseln zulässig.
+Das bedeutet, dass innerhalb eines Urteils (aber nicht darüber hinaus!) die Personen jeweils wiedererkennbar sein dürfen.
+Hier bietet sich an, die Personen alphabetisch fortlaufend mit Buchstaben zu benennen (bspw. Zeugen A, B und C), oder aber Kürzel ihrer Funktion nach (bspw. Landesvorstandsmitglied~L, Prozessvertreter~V, Zeuge~Z) einzuführen.
+Eine bloße Abkürzung von Namen auf den ersten Buchstaben hingegen sollte unterbleiben, da hierbei die Identifizierung zumindest innerhalb der Piratenpartei zu einfach möglich wäre.
+
+\subsection{Nichtöffentliche Verfahren}
+\label{Dokumentation:Urteile:Nichtöffentlich}
+\index[idx]{Verschlusssachen}
+Ist das Verfahren nichtöffentlich, so wird lediglich der Tenor veröffentlicht, \S~12 Abs.~8 S.~3~SGO.\index[paridx]{SGO!12@\S~12!8@Abs.~8}
+Die Bestimmung ist -- auch in Ansehung der Formulierung des \S~12 Abs.~3 S.~1~SGO\index[paridx]{SGO!12@\S~12!Abs.~3} -- dergestalt auszulegen, dass das Rubrum zum \enquote{Tenor} gehört (vgl.~\ref{Urteilsaufbau:Rubrum}~f.).\index[idx]{Tenor}
+
+Effektiv wird das Urteil wie ein Urteil eines öffentlichen Verfahrens geschwärzt bzw. pseudonymisiert (s.o. \ref{Dokumentation:Urteile:Pseudonymisierung}), allerdings vor Schilderung des Sachverhalts und der Entscheidungsgründe \enquote{abgeschnitten}.
+
+Diese Bestimmung dient dem Schutz der Persönlichkeitsrechte des \enquote{disziplinierten} Mitglieds.
+Sie birgt allerdings das Problem, dass in der Praxis nur ein kleiner Teil der (Individual-) Ordnungsmaßnahmen veröffentlicht werden:
+Der Beschluss zum Nichtöffentlichen Verfahren ist in diesen Fällen eine gebundene Entscheidung, \S~10 Abs.~7 S.~2~SGO.\index[paridx]{SGO!10@\S~10!7@Abs.~7}
+Insbesondere, da auf diese Möglichkeit im Eröffnungsbeschluss hinzuweisen ist, \S~9 Abs.~4 S.~1~SGO,\index[paridx]{SGO!9@\S~9!4@Abs.~4} sind viele Ordnungsmaßnahmeverfahren nichtöffentlich.
+Für die Parteiöffentlichkeit, insbesondere aber auch Vorstände niedrigerer Untergliederungen mit geringerem Aufkommen an Ordnungsmaßnahmen und auch ortsfremde Schiedsgerichte besteht daher das Problem, dass insbesondere bestätigte Ordnungsmaßnahmen und erfolgreiche Anträge auf Parteiausschlussverfahren inhaltlich nicht nachvollziehbar sind.
+Dies erschwert die Etablierung von Beurteilungsmaßstäben, welches Verhalten disziplinarwürdig ist, und welches nicht.
+
+Eine Möglichkeit, die in solchen Verfahren aufgeworfenen Rechtsfragen dennoch öffentlich zu diskutieren, besteht im Rahmen des Arbeitsberichts (vgl.~\ref{Dokumentation:Rechenschaftslegung:Arbeitsbericht:nichtöffentlicheVerfahren}).
+
+\section{Öffentliche Mitteilungen}
+\label{Dokumentation:Veröffentlichungen}
+Abgesehen von den zu veröffentlichenden Urteilen und Protokollen treten die Schiedsgerichte eher selten in Kommunikation mit anderen Organen oder der Gesamtpartei.
+Ausnahmen hiervon sind vor allem die Bekanntmachung von Beeinflussungsversuchen, sowie die Stellungnahmen zu laufenden Verfahren.
+
+\subsection{Bekanntmachung von Beeinflussungsversuchen}
+\label{Dokumentation:Veröffentlichungen:Beeinflussungen}
+\index[idx]{Beeinflussungsversuch}
+Gemäß \S~2 Abs.~5~SGO\index[paridx]{SGO!2@\S~2!5@Abs.~5} sind die Schiedsgerichte verpflichtet, Versuche der Beeinflussung eines Verfahrens öffentlich bekannt zu machen.
+Was eine Beeinflussung ist, liegt letztlich im Ermessen des Schiedsgerichts.
+Insbesondere der Versuch, dem Schiedsgericht Weisungen zu erteilen (im Innenverhältnis der Partei durch \S~2 Abs.~2~SGO,\index[paridx]{SGO!2@\S~2!2@Abs.~2} im Außenverhältnis durch \S~14 Abs.~2 S.~4~PartG\index[paridx]{PartG!14@\S~14!2@Abs.~2} verboten) stellt eine solche veröffentlichungspflichtige Tatsache dar.
+Obwohl der Wortlaut nahelegt, dass sich die Vorschrift ausschließlich auf die Beeinflussung von bestimmten Verfahren bezieht, ist aufgrund der besonderen (auch gesetzlich geschützten) Bedeutung der Unabhängigkeit der Schiedsgerichte anzunehmen, dass sich die Norm auf jedwede Beeinflussung des Organs Schiedsgericht oder der Richter in ihrer Funktion bezieht.
+Es ist dabei prinzipiell nicht maßgeblich, ob die Quelle der Beeinflussung inner- oder außerhalb der Partei liegt.
+
+Die Öffentlichkeit, der der Beeinflussungsversuch bekannt gemacht werden soll, ist die Parteiöffentlichkeit.
+Eine Verlautbarung über eine geeignete Mailingliste (bspw. die Aktiven-Liste des Landes, ggf. sogar des Bundesverbandes) ist daher zur Bekanntmachung prinzipiell ausreichend.
+
+Eine explizite Aufbewahrungsfplichtfür die Bekanntmachung von Beeinflussungsversuchen ergibt sich aus der SGO nicht.
+Um allerdings die Unabhängigkeit der Schiedsgerichte zu schützen und aus dem Prinzip der Transparenz heraus bietet es sich an, die Verlautbarung auch im Rahmen der allgemeinen Dokumentation des Schiedsgerichts abrufbar zu halten.
+
+Bezüglich der Dokumentation und Aufbewahrung bietet sich daher eine Behandlung entsprechend den Urteilen an (wobei die Aufbewahrung einer unterschriebenen Fassung wohl unterbleiben kann).
+Zum Schutze der Persönlichkeitsrechte der Beteiligten sollte eine angemessene Pseudonymisierung stets in Betracht gezogen werden.
+
+\subsection{Stellungnahmen zu laufenden Verfahren}
+\label{Dokumentation:Veröffentlichungen:Stellungnahmen}
+\index[idx]{Stellungnahme}
+Das Gericht kann zu laufenden Verfahren öffentliche Stellungnahmen abgeben, \S~15 Abs.~2 S.~1~SGO.\index[paridx]{SGO!15@\S~15!2@Abs.~2}
+Voraussetzung dafür ist, dass das Verfahren öffentlich ist (\S~15 Abs.2 S.~2~SGO)\index[paridx]{SGO!15@\S~15!2@Abs.~2} und dass das Schiedsgericht ein erhebliches parteiöffentliches Interesse feststellt.
+
+Die \emph{Parteiöffentlichkeit}\index[idx]{Parteiöffentlichkeit} beschreibt den öffentlichen Raum, den die Mitglieder der Partei gemeinsam bilden.
+Für ein \enquote{parteiöffentliches Interesse} sind Umstände außerhalb der Piratenpartei also nicht von Belang.
+Ein solches Interesse kann einerseits \enquote{von Seiten} der Parteiöffentlichkeit bestehen, oder aber \enquote{für} sie:
+Im ersteren Fall wird das Verfahren bereits von einem (erheblichen) Teil der Parteiöffentlichkeit verfolgt.
+Dies lässt sich bspw. an Diskussionen über das Verfahren ablesen, die an für die Parteiöffentlichkeit exponiert wahrnehmbarer Stelle stattfinden, oder auch an direkten Nachfragen an das Gericht.
+Im zweiten Fall ist eine tatsächliche Kenntnisnahme durch die Parteiöffentlichkeit unerheblich.
+Hier ist nicht maßgeblich, dass von Seiten eines erheblichen Teils der Parteiöffentlichkeit ein Interesse an Verfahrensdetails besteht, sondern, dass dieses Interesse bestehen sollte.
+
+Das Gericht kann zu Stellungnahmen nicht verpflichtet werden.
+Ebenso liegt der Umfang der Stellungnahme ausschließlich im Ermessen des Schiedsgerichts.
+Entsprechend den Vorschriften zum Urteil sollte pseudonymisiert werden.
+Das Gericht sollte besonderes Augenmerk darauf richten, die Veröffentlichung neutral zu halten, um keiner Partei einen Anlass zur Besorgnis der Befangenheit (vgl.~\ref{Zusammensetzung:Spruchkoerper:Befangenheitsbesorgnis}) zu geben.
+
+Da Stellungnahmen nur zu laufenden Verfahren zulässig sind, erlischt das Recht prinzipiell mit Abschluss des Verfahrens.
+In der entsprechenden Satzungsbestimmung aber ein Verbot von Korrekturen oder sachgerechten Ergänzungen bereits veröffentlichter Stellungnahmen zu sehen, widerspräche jedoch dem Sinn der Vorschrift, die Parteiöffentlichkeit sachgerecht zu unterrichten.
+Korrekturen müssen daher immer, Ergänzungen in engen Grenzen ebenfalls zulässig sein, soweit das Gericht eine Stellungnahme veröffentlicht hat.
+Zu beachten ist:
+Das Urteil darf in solchen, nachträglichen Veröffentlichungen, nicht berührt werden.
+
+Bezüglich der Dokumentation und Aufbewahrung bietet sich eine Behandlung entsprechend der Bekanntmachungen von Beeinflussungsversuchen an:
+Stellungnahmen sind als \enquote{relevantes Schriftstück} i.S.d. \S~14 Abs.~2~SGO\index[paridx]{SGO!14@\S~14!2@Abs.~2} zugleich Teil der Verfahrensakte.\index[idx]{Akte!Inhalt}
+Während der Aufbewahrungsfrist bietet sich daher eine Aufbewahrung mit der Verfahrensakte an.
+Da die Stellungnahme aber auch veröffentlicht wurde, sollte sie unbegrenzt verfügbar gehalten werden; ein Interesse an einer Depublizierung ist der SGO nicht zu entnehmen.
+
+\section{Aufbewahrung der Akten}
+\label{Dokumentation:Aufbewahrung}
+Die Aufbewahrung der Akten bestimmt sich nach der Geschäftsordnung des Schiedsgerichts, \S~2 Abs.~6 S.~2~SGO.\index[paridx]{SGO!2@\S~2!6@Abs.~6}
+Sie sollte möglichst zweckmäßig erfolgen.
+Eine zentrale, elektronische Verwaltung, auf die das gesamte Gericht zugreifen kann, ist daher sinnvoll.
+Hinsichtlich der Erstellung von Backups etc. ist ein Austausch mit den Technikverantwortlichen der Gliederung empfehlenswert.
+
+Auf Anfrage können möglicherweise die Datenschutzbeauftragten in der Piratenpartei Hilfestellungen zum Datenschutz geben.
+
+\subsection{Laufende Verfahren}
+Für laufende Verfahren ist bedeutsam, dass der gesamte Spruchkörper einfachen Zugriff auf die gesamte Verfahrensakte nehmen kann.
+Ebenso ist wichtig, dass sie zu jedem Zeitpunkt insgesamt an die Beteiligten gesendet werden kann, um deren Recht auf Akteneinsicht gewährleisten zu können.
+
+Am einfachsten lässt sich dies durch ein geeignetes Fallbearbeitungssystem\footnote{Auch \emph{Issue-Tracking-System}, \href{https://de.wikipedia.org/wiki/Issue-Tracking-System}{Wikipedia (de): Issue-Tracking-System}.} gewährleisten.
+Auch (in nicht abschließender Aufzählung) \enquote{Cloud}-Systeme, ein gemeinsam genutzer FTP\nomenclature{FTP}{File Transfer Protocol}-Server oder Etherpad bzw. Piratenpad Teampads sind hierzu geeignet.
+Unabhängig von der Software bzw. dem genutzten Protokoll ist wichtig, dass die administrativen Rechte auf dem jeweiligen Server in der Hand der Piratenpartei liegen.
+Dienste Dritter dürfen nicht genutzt werden.
+Dass die Nutzung der in den Akten enthaltenen Daten ausschließlich beim Schiedsgericht liegen darf, versteht sich von selbst.
+
+\subsection{Abgeschlossene Verfahren}
+Mit Abschluss des Verfahrens gelten für die Verfahrensakte und das Urteil (und ggf. weitere Beschlüsse, s.o.~\nomenclature{s.o.}{siehe oben}\ref{Dokumentation:Beschlüsse}) unterschiedliche Bestimmungen.
+
+\subsubsection{Verfahrensakten}
+Soweit ein elektronisches Aufbewahrungssystem genutzt wird, können die Akten über die Aufbewahrungsfrist darin verbleiben.
+
+In dem Falle, dass die Geschäftsordnung des Gerichts eine sofortige Löschung der elektronischen Akte festlegt, ist sie auf einem Datenträger oder in gedruckter Form (in jedem Falle aber vollständig) beim Gericht zu hinterlegen.
+Hierfür bietet sich eine gegen unbefugten Zugriff gesicherte Aufbewahrung in der Geschäftsstelle der jeweiligen Gliederung an.
+Zweckmäßig ist dann die Aufbewahrung im verschlossenen Umschlag mit außen angebrachtem Verfallsdatum.
+
+Soweit es während des Verfahrens mehrere Speicherorte für die Akte gab (bspw. jeweils bei den mit dem Verfahren befassten Mitgliedern des Spruchkörpers), sollten diese nach Verfahrensabschluss auf ein einzelnes Archiv der Akte reduziert werden.
+Nach Ablauf der fünfjährigen Aufbewahrungsfrist (\S~14 Abs.~5~SGO)\index[paridx]{SGO!14@\S~14!5@Abs.~5} ist die Akte an all ihren Speicherorten zu vernichten.
+
+\subsubsection{Urteile}
+Urteile sind unbefristet aufzubewahren, \S~14 Abs.~5 S.~2~SGO.\index[paridx]{SGO!14@\S~14!5@Abs.~5}
+Dies bezieht sich insbesondere auf die schriftliche, von allen (am Verfahren beteiligten) Richtern unterschriebene Originalfassung nach \S~12 Abs.~7~SGO.\index[paridx]{SGO!12@\S~12!7@Abs.~7}
+Diese sollten zentral, bspw. in der Geschäftsstelle der Gliederung, aufbewahrt werden.
+Sie müssen gegen den Zugriff Unbefugter gesichert sein (bspw. Verschluss in einem Schrank o.ä.\nomenclature{o.ä.}{oder ähnliche(r/s)}).
+
+Eine getrennte Aufbewahrung der Urteile ist hingegen nicht notwendig.
+Einfaches Abheften (ggf. in intransparenter Hülle) in einem Ordner ist ausreichend.
+Zugriffsrechte bestehen nur für die Beteiligten und für das Gericht.
+
+\subsection{Sonstige Akten}
+Die Aufbewahrung sonstiger Akten liegt im Ermessen des Gerichts.
+Sie regelt sich nach der Geschäftsordnung oder aber der im Gericht gängigen Praxis.
+Es gelten lediglich die allgemein üblichen Vorschriften (Datenschutz etc.).
+
+Auch der Zugang zu sonstigen Akten des Gerichts ist grundsätzlich zu beschränken, da sie von der Verschwiegenheitspflicht aus \S~2 Abs.~4~SGO\index[paridx]{SGO!2@\S~2!4@Abs.~4} umfasst sind.
+Ausnahmen hiervon sind möglich.
+Als Faustformel kann gelten:
+\Zitat{Was veröffentlicht ist, bleibt veröffentlicht.}
+Insbesondere alle im Rahmen der Rechenschaftslegung erfolgenden Veröffentlichungen, sowie Bekanntmachungen und Stellungnahmen (s.o.~\ref{Dokumentation:Veröffentlichungen}) sollten daher nicht depubliziert werden.
+
+\section{Rechenschaftslegung}
+\label{Dokumentation:Rechenschaftslegung}
+Das Gericht legt für seine Arbeit öffentlich Rechenschaft.\index[idx]{Rechenschaftspflicht}
+Es unterliegt dabei einerseits einer laufenden Berichts- und Veröffentlichungspflicht, andererseits einer (zusammenfassenden) Berichtspflicht dem das Gericht wählenden Parteitag gegenüber.
+
+\subsection{Laufende Berichtspflicht}
+\label{Dokumentation:Rechenschaftslegung:Laufend}
+Das Gericht soll während der Amtszeit regelmäßig berichten; gemäß \S~15 Abs.~1~SGO\index[paridx]{SGO!15@\S~15!1@Abs.~1} insbesondere über die Zahl der Fälle.
+Allerdings hat das Gericht auch Urteile zu veröffentlichen, \S~12 Abs.~8 S.~1~SGO.\index[paridx]{SGO!12@\S~12!8@Abs.~8}
+Als Praxis aller Schiedsgerichte hat sich daher eingebürgert, dieser Berichtspflicht durch die Führung eines regelmäßig aktualisierten, öffentlichen Verfahrensverzeichnisses nachzukommen.
+Diese sind häufig im Wiki der jeweiligen Gliederung angelegt.
+
+Der Satzungsbestimmung genügt dabei dem Wortlaut nach die Nennung der Anzahl der anhängigen, sowie der der (in der laufenden Amtsperiode) abgeschlossenen Verfahren.
+Die Praxis der Gerichte geht darüber hinaus und listet die einzelnen Verfahren zumindest mit Aktenzeichen, dem Datum der Verfahrenseröffnung (ggf. auch der Anrufung), den veröffentlichten Beschlüssen (s.o.~\ref{Dokumentation:Beschlüsse}), und einer kurzen Zusammenfassung von Sachverhalt und ggf. der Verfahrensgeschichte auf.
+
+Technisch ist die Veröffentlichung innerhalb eines elektronischen Systems sinnvoll, das sowohl für Menschen, als auch für Maschinen lesbar ist.
+Insbesondere die Urteile sollten als eigenständige Dokumente verfasst und nicht lediglich in einer Datenbank abgelegt sein.
+Dies erleichtert die Nachvollziehbarkeit der Dateiintegrität, bspw. über Prüfsummen oder sogar Signaturen.\footnote{Das Bundesschiedsgerichts bspw. hatte zeitweise die Urteile im PDF veröffentlicht und mit PGP\nomenclature{PGP}{Pretty Good Privacy (Verschlüsselungstechnologie)} signiert.}
+Eingeschränkt trifft dies z.B. auf ein Wiki zu, weswegen die überwiegende Mehrheit der Gerichte solche Systeme für ihre laufende Rechenschaftslegung verwendet.
+
+Die bisher leistungsfähigste Dokumentationsführung basiert auf dem verteilten Versionskontrollprogramm \emph{git},\footnote{\href{http://www.git-scm.org/}{Offizielle Website: http://www.git-scm.org/}.} was durch kryptographische Methoden auch die Dateiintegrität ausreichend sicherstellt und zudem vollständig maschinenlesbar ist.
+Bei Verwendung maschinenlesbarer Urteilsdokumente (z.B. durchsuchbare PDF) ist auch eine Durchsuchbarkeit gewährleistet; einer eigenen Suchfunktion innerhalb der Software bedarf es dazu nicht.
+Die Software selbst ist in der Adminsitration simpel gehalten und besitzt kaum Anforderungen an das Hosting-System.
+Dabei bietet sie permanente Links auf das Urteil, sowie den Listeneintrag mit den obigen Informationen und bspw. die bereits erwähnten Vorteile der kryptographischen Dateiintegritätsprüfung und die Maschinenlesbarkeit.
+Die Software ist quelloffen unter freier Lizenz und wurde auf Github\footnote{Github selbst ist ein kommerzielles Projekt. Das ändert nichts an der Lizenz der Software. Sie ist daher ausdrücklich \emph{nicht} als proprietär zu bewerten.} entwickelt.\footnote{\href{https://github.com/Bundesschiedsgericht/BSG}{https://github.com/Bundesschiedsgericht/BSG}.}
+
+In keinster Weise für die Rechenschaftslegung geeignet ist ein Blogsystem.
+Die Zuordnung einzelner Veröffentlichungen zu einem Verfahren gelingt kaum; die Integrität der Veröffentlichungen ist im Vergleich zu den geschilderten Alternativen kaum darstellbar.
+Hinsichtlich der Lesbarkeit ist festzuhalten, dass ein Blog nicht in demselben Maße auslesbar ist, wie es ein git-repository oder auch eine Wikiseite ist -- letztere bieten Einblick in die Datenquellen; das Blog nicht.
+
+\subsection{Arbeitsbericht}
+\label{Dokumentation:Rechenschaftslegung:Arbeitsbericht}
+\index[idx]{Arbeitsbericht}
+Der Arbeitsbericht des Schiedsgerichts wird dem Parteitag vorgelegt, der es (neu) wählt.
+
+\subsubsection{Inhalt}
+\label{Dokumentation:Rechenschaftslegung:Arbeitsbericht:Inhalt}
+An den Inhalt dieses Arbeitsberichts stellt die SGO höhere Anforderungen:
+Gemäß \S~15 Abs.~3~SGO\index[paridx]{SGO!15@\S~15!3@Abs.~3} soll er die Fälle der Amtsperiode inklusive der jeweiligen Urteile kurz darstellen.
+Das trifft den Umfang, der sich bei der laufenden Rechenschaftslegung (s.o.~\ref{Dokumentation:Rechenschaftslegung:Laufend}) als gängige Praxis eingestellt hat.
+Der dort genannte Umfang ist deswegen nicht nur legitimiert (da die entsprechenden Daten ohnehin veröffentlicht würden); die Erstellung des Arbeitsberichts verläuft so \enquote{nebenbei} über die gesamte Amtszeit und wird dadurch erleichtert.
+Wird der laufenden Berichtspflicht im bereits geschilderten Umfang gefolgt, so können die Fälle der Amtszeit aus der laufend aktualisierten Übersicht in den Arbeitsbericht einfach übertragen werden.
+
+Darüber hinaus sollte der Arbeitsbericht aber auch weitere Informationen enthalten, um aus sich heraus verständlich zu sein:
+Zunächst ist die Zusammensetzung des Schiedsgerichts bei seiner Wahl und alle weiteren Veränderungen (durch Rücktritte etc.) eine wichtige Information.
+Die Auflistung der Zusammensetzung der Spruchkörper in einzelnen Verfahren kann unterbleiben, da dies aus den Urteilen ersichtlich wird.
+Zumindest die Anzahl der Sitzungen und Verhandlungen des Schiedsgerichts sollte aufgeführt werden, ggf. sollte ein Hinweis auf Protokollierung erfolgen.
+Hieran kann der Parteitag die Aktivität, aber auch den Arbeitsaufwand des Schiedsgerichts ablesen.
+Das ist insbesondere für Bewerber um das Richteramt eine relevante Information.
+Zuletzt sollten auch weitere Aktivitäten des Schiedsgerichts im Arbeitsbericht nicht fehlen.
+Hier sind v.a. Weiterbildungen und vergleichbare Veranstaltungen zu nennen.
+
+Verfügt das Schiedsgericht über ein eigenes Budget, ist eine Rechenschaftslegung darüber im Arbeitsbericht empfehlenswert.\index[idx]{Budget}
+
+\subsubsection{Darstellung nichtöffentlicher Verfahren}
+\label{Dokumentation:Rechenschaftslegung:Arbeitsbericht:nichtöffentlicheVerfahren}
+\index[idx]{Verschlusssachen}
+Schließlich bietet der Arbeitsbericht die Möglichkeit, dem Problem der nicht-öffentlichen Rechtsprechung Herr zu werden (s.o.~\ref{Dokumentation:Urteile:Nichtöffentlich}).
+Zwar sind nichtöffentliche Verfahren auch vom Gericht vertraulich zu behandeln, \S~9 Abs.~4 S.~2~SGO.\index[paridx]{SGO!9@\S~9!4@Abs.~4}
+Das Urteil darf nur eingeschränkt veröffentlicht werden, \S~12 Abs.~8 S.~4~SGO,\index[paridx]{SGO!12@\S~12!8@Abs.~8} und öffentliche Stellungnahmen sind vollständig unzulässig, \S~15 Abs.~2 S.~2~SGO.\index[paridx]{SGO!15@\S~15!2@Abs.~2}
+Demgegenüber sollen aber alle Fälle der Amtsperiode im Arbeitsbericht kurz dargestellt werden, \S~15 Abs.~3~SGO.\index[paridx]{SGO!15@\S~15!3@Abs.~3}
+
+Die Lösung besteht in der Führung einer eigenen Rubrik für nichtöffentliche Verfahren im Arbeitsbericht, die lediglich rechtliche Erwägungen ohne nachvollziehbaren Bezug zu einem einzelnen Verfahren enthält.
+Im Stile von \enquote{Leitsätzen}\index[idx]{Leitsatz} können hier die Kerninhalte der Rechtsprechung nichtöffentlicher Verfahren zusammenfassend veröffentlicht werden.
+Dabei muss sichergestellt werden, dass ein unbeteiligter Dritter keine unmittelbaren Rückschlüsse auf ein einzelnes Verfahren ziehen kann.
+Insbesondere Daten, Aktenzeichen oder Schilderungen von Details oder handelnden Personen des Sachverhalts, sowie ggf. Gliederungsnamen etc. dürfen sich daher nicht in der Schilderung wiederfinden.
+Weiterhin müssen bei der geschilderten Verfahrensweise mindestens zwei nichtöffentliche Verfahren vorliegen, da ansonsten eine unmittelbare Zuordnung zu einem einzelnen Verfahren möglich ist.
+
+Sollte nur ein einziges Verfahren vorliegen, liegt die Lösung in einer entsprechenden Notiz für das nachfolgende Schiedsgericht und einem Hinweis im Arbeitsbericht, dass die rechtlich bedeutsamen Aspekte des nichtöffentlichen Verfahrens in den nächsten Arbeitsberichten erörtert werden sollen, sobald mindestens ein weiteres nichtöffentliches Verfahren vorliegt.
+
+Alternativ kann auch eine gesammelte Veröffentlichung erfolgen.
+Soweit sich die Gerichte untereinander darauf einigen, wäre auch eine zentrale Veröffentlichung solcher Rechtsprechungsinhalte denkbar, bspw. im Arbeitsbericht des Bundesschiedsgerichts.
+Diese Vorgehensweise sollte dann durch gemeinsame (bzw. zmd.\nomenclature{zmd.}{zumindest} gleichlautende) Bestimmungen der Geschäftsordnung\index[idx]{Geschäftsordnung} der beteiligten Gerichte geregelt sein.
+
+\chapterbib
 % \end{refsection}
