--- a/Organisation.tex
+++ b/Organisation.tex
@@ -12,6 +12,7 @@ Es empfiehlt sich, dass sich das Gericht regelmäßig fortbildet und (dabei) auc
 %\subsection{Vorsitz, Richter, Ersatzrichter}
 %\subsection{Aus- und Fortbildungsmaßnahmen}
 %z.B. dieses Handbuch, Schulungsveranstaltungen, SG-Koordinations-ML, Lektüre der Urteile anderer Schiedsgerichte, MIP als frei verfügbare, wissenschaftliche Quelle
+%Datenschutzvereinbarung, Datenschutzbelehrung!
 
 %\section{Infrastruktur}
 
