--- a/Dokumentation.tex
+++ b/Dokumentation.tex
@@ -90,7 +90,7 @@ Zudem besteht für die Beteiligten die Möglichkeit des Rechtsmittelgebrauchs, d
 \subsubsection{Unanfechtbare Beschlüsse}
 \label{Dokumentation:Beschlüsse:Verfahrensleitend:Unanfechtbar}
 \index[idx]{Beschluss!Unanfechtbarkeit}
-Nicht anfechtbar sind bspw. die Eröffnung eines Verfahrens gemäß \SSS~8 Abs.~6 S.~1, 9 Abs.~1 S.~1~SGO,\index[paridx]{SGO!8@\S~8!6@Abs.~6}\index[paridx]{SGO!9@\S~9!1@Abs.~1} der Ausschluss eines Mitglieds des Spruchkörpers wegen der Besorgnis der Befangenheit (\S~5 Abs.~6 S.~1~SGO\index[paridx]{SGO!5@\S~5!6@Abs.~6}), sowie die Anordnungen der Schiedsgerichte zu Fristen, über Beweisanträge (vgl. \S~10 Abs.~1 S.~2~SGO)\index[paridx]{SGO!10@\S~10!2@Abs.~2} und alle sonstigen Beschlüsse, gegen die nicht explizit ein Rechtsmittel vorgesehen ist.\footnote{Vgl. \S~13 Abs.~6~SGO\index[paridx]{SGO!13@\S~13!6@Abs.~6}, MISSING BSG zu RECHTSMITTELN/RECHTSMITTELKLARHEIT!.}
+Nicht anfechtbar sind bspw. die Eröffnung eines Verfahrens gemäß \SSS~8 Abs.~6 S.~1, 9 Abs.~1 S.~1~SGO,\index[paridx]{SGO!8@\S~8!6@Abs.~6}\index[paridx]{SGO!9@\S~9!1@Abs.~1} der Ausschluss eines Mitglieds des Spruchkörpers wegen der Besorgnis der Befangenheit (\S~5 Abs.~6 S.~1~SGO\index[paridx]{SGO!5@\S~5!6@Abs.~6}), sowie die Anordnungen der Schiedsgerichte zu Fristen, über Beweisanträge (vgl. \S~10 Abs.~1 S.~2~SGO)\index[paridx]{SGO!10@\S~10!2@Abs.~2} und alle sonstigen Beschlüsse, gegen die nicht explizit ein Rechtsmittel vorgesehen ist.\footnote{Vgl. \S~13 Abs.~6~SGO\index[paridx]{SGO!13@\S~13!6@Abs.~6}, ebenso \cite[5]{LSGBB147}.}
 
 Unanfechtbare Beschlüsse dürften in der Regel eindeutig der Verfahrensakte zuzuordnen sein.
 Eine Veröffentlichung muss daher nicht erfolgen.
